--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 deploy:
   type: git
-  repo: git@github.com: Tamirespaquino/Tamirespaquino.github.io
+  repo: 'git@github.com:Tamirespaquino/tamirespaquino.git'
   branch: MASTER
